--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "weather",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://www.metaweather.com",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "sass": "^1.32.11",
     "web-vitals": "^1.1.1"
